compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__prelude__qualified_ok.snap
---
source: compiler-core/src/javascript/tests/prelude.rs
expression: "import gleam\npub fn go() { gleam.Ok(1) }\n"
---
----- SOURCE CODE
import gleam
pub fn go() { gleam.Ok(1) }


----- COMPILED JAVASCRIPT
import * as $gleam from "../gleam.mjs";

export function go() {
  return new $gleam.Ok(1);
}
